--- a/MyAppPoema/app/src/main/res/layout/activity_main_preco.xml
+++ b/MyAppPoema/app/src/main/res/layout/activity_main_preco.xml
@@ -7,22 +7,113 @@
     tools:context=".MainActivityPreco"
     android:orientation="vertical">
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="PRECOLOMBINA"
-        android:textSize="25sp"
-        android:gravity="center"
-        android:layout_marginTop="25sp"
-        android:textStyle="bold"
-        />
+        android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150sp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/TituloPreco"
+            android:textSize="25sp"
+            android:gravity="center"
+            android:layout_marginTop="25sp"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:textIsSelectable="true"
+            android:textSize="15sp"
+            android:justificationMode="inter_word"
+            android:gravity="center"
+            android:text="@string/ResPreco"
+            />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_sombrero"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15sp"
+            android:textIsSelectable="true"
+            android:textSize="20sp"
+            android:justificationMode="inter_word"
+            android:gravity="center"
+            android:text="@string/TPreco1"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15sp"
+            android:textIsSelectable="true"
+            android:textSize="15sp"
+            android:justificationMode="inter_word"
+            android:text="@string/PoemaPreco1"
+            />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_maya"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15sp"
+            android:textIsSelectable="true"
+            android:textSize="20sp"
+            android:justificationMode="inter_word"
+            android:gravity="center"
+            android:text="@string/TPreco2"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:textIsSelectable="true"
+            android:textSize="15sp"
+            android:justificationMode="inter_word"
+            android:text="@string/PoemaPreco2"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15sp"
+            android:textIsSelectable="true"
+            android:textSize="20sp"
+            android:justificationMode="inter_word"
+            android:gravity="center"
+            android:text="@string/TPreco3"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:textIsSelectable="true"
+            android:textSize="15sp"
+            android:justificationMode="inter_word"
+            android:gravity="center"
+            android:text="@string/PoemaPreco3"
+            />
+        <Button
+            android:id="@+id/btnReturnPreco"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Retornar"
+            android:onClick="onClickPreco"
+            />
+    </LinearLayout>
+    </ScrollView>
 
-    <Button
-        android:id="@+id/btnReturnPreco"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Retornar"
-        android:onClick="onClickPreco"
-    />
+
 </LinearLayout>
