--- a/MyAppSwLocal/app/src/main/res/layout/activity_main.xml
+++ b/MyAppSwLocal/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="CRUD SW - Productos"
+        android:text="Servicio Web Local - Productos"
         android:textStyle="bold"
         android:textSize="25sp"
         android:gravity="center"
@@ -35,28 +35,48 @@
         android:text="Ingrese Producto"
         android:backgroundTint="#303F9F"
         android:textSize="15sp"
+        app:icon="@drawable/ic_add"
         />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnActualisarrMenu"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15sp"
-        android:text="Actualizar Producto"
-        app.icon="@drawable/ic_producto"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
-        />
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnBuscarMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15sp"
-        android:text="Buscar Producto"
-        app.icon="@drawable/ic_producto"
+        android:text="Buscar Producto por Codigo"
+        app:icon="@drawable/ic_add"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
         />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnListarMenu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15sp"
+        android:text="Lista"
+        app:icon="@drawable/ic_add"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+        />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnEliminarMenu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15sp"
+        android:text="Eliminar"
+        app:icon="@drawable/ic_add"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+        />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnActualizarMenu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15sp"
+        android:text="Actualizar Producto"
+        app:icon="@drawable/ic_add"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+        />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_action_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
