--- a/MyAppSwLocal/app/src/main/res/layout/activity_malistar_mostrar_sw.xml
+++ b/MyAppSwLocal/app/src/main/res/layout/activity_malistar_mostrar_sw.xml
@@ -1,9 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MAListarMostrarSW">
+    tools:context=".MAListarMostrarSW"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Listado de Productos"
+        android:textStyle="bold"
+        android:textSize="25sp"
+        android:gravity="center"
+        android:layout_margin="15sp"
+        android:layout_gravity="center"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+    <ListView
+        android:id="@+id/lvListarProducto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        />
+    </LinearLayout>
+
+</LinearLayout>
